# SnailFFmpeg

./: LICENSE  README.md
SnailFFmpeg/: build.gradle  gradle.properties  settings.gradle
SnailFFmpeg/app/: CMakeLists.txt  build.gradle
SnailFFmpeg/app/src/androidTest/java/com/snail/snailffmpeg/: ExampleInstrumentedTest.kt
SnailFFmpeg/app/src/main/: AndroidManifest.xml
SnailFFmpeg/app/src/main/cpp/: AudioStream.cpp  AudioStream.h  Mp4ToAVI.h  RtmpPusher.cpp  SafeQueue.cpp  SafeQueue.h  TransformMedia.cpp  VideoStream.cpp  VideoStream.h
SnailFFmpeg/app/src/main/cpp/include/: audio_codec.cpp  audio_codec.h  init_lib.cpp  init_lib.h  mp4toavi.cpp  mp4toavi.h  native_lib.cpp  native_lib.h  stream_image.cpp  stream_image.h  video_codec.cpp  video_codec.h
SnailFFmpeg/app/src/main/java/com/snail/snailffmpeg/: MainActivity.kt
SnailFFmpeg/app/src/main/java/com/snail/snailffmpeg/base/: BaseActivity.kt  BaseApplication.kt  BaseDecoder.kt  BaseEncoder.kt  BasePush.kt  IDecodeStateListener.kt  IDecoder.kt  IDecoderProgress.kt  IEncodeStateListener.kt  IExtractor.kt  MMExtractor.kt  MMuxer.kt
SnailFFmpeg/app/src/main/java/com/snail/snailffmpeg/codec/: AVMediaCodec.kt
SnailFFmpeg/app/src/main/java/com/snail/snailffmpeg/constant/: DecodeState.kt  MediaForm.kt
SnailFFmpeg/app/src/main/java/com/snail/snailffmpeg/decoder/: AudioDecoder.kt  AudioExtractor.kt  DeCodeStateListener.kt  Frame.kt  VideoDecoder.kt  VideoExtractor.kt
SnailFFmpeg/app/src/main/java/com/snail/snailffmpeg/encoder/: AudioEncoder.kt  DeEncoderStateListener.kt  EncoderActivity.kt  VideoEncoder.kt
SnailFFmpeg/app/src/main/java/com/snail/snailffmpeg/extends/: StringExt.kt  ViewExt.kt
SnailFFmpeg/app/src/main/java/com/snail/snailffmpeg/ffmpeg/transform/: MediaTransFormUtil.kt  TransformActivity.kt
SnailFFmpeg/app/src/main/java/com/snail/snailffmpeg/live/: LiveActivity.kt  LivePusher.kt
SnailFFmpeg/app/src/main/java/com/snail/snailffmpeg/live/model/: AudioBean.kt  VideoBean.kt
SnailFFmpeg/app/src/main/java/com/snail/snailffmpeg/live/stream/: AudioStream.kt  CameraHelper.kt  VideoStream.kt
SnailFFmpeg/app/src/main/java/com/snail/snailffmpeg/model/: AudioInfo.kt  VideoInfo.kt
SnailFFmpeg/app/src/main/java/com/snail/snailffmpeg/native/: KotlinToJNI.kt  NativePlayer.kt
SnailFFmpeg/app/src/main/java/com/snail/snailffmpeg/utils/: LoggerPrinter.kt
SnailFFmpeg/app/src/main/res/layout/: activity_encoder.xml  activity_live.xml  activity_main.xml  activity_transform.xml
SnailFFmpeg/app/src/main/res/values/: strings.xml
SnailFFmpeg/app/src/test/java/com/snail/snailffmpeg/: ExampleUnitTest.kt
SnailFFmpeg/ffmpeg/: CMakeLists.txt  build.gradle
SnailFFmpeg/ffmpeg/src/androidTest/java/com/snail/ffmpeg/: ExampleInstrumentedTest.kt
SnailFFmpeg/ffmpeg/src/main/: AndroidManifest.xml
SnailFFmpeg/ffmpeg/src/main/cpp/: AddLogo.cpp  AddLogo.h  AudioDecode.cpp  AudioDecode.h  LogUtil.h  MediaDecoder.cpp  MediaDecoder.h  MediaEncoder.cpp  MediaEncoder.h  MediaFilter.cpp  MediaFilter.h  MediaPlayer.cpp  MediaPlayer.h  Mp4ToAVI.cpp  Mp4ToAVI.h  TransformMedia.cpp  VideoDecode.cpp  VideoDecode.h  VideoScreenshot.cpp  VideoScreenshot.h
SnailFFmpeg/ffmpeg/src/main/cpp/include/libavcodec/: avcodec.h
SnailFFmpeg/ffmpeg/src/main/cpp/include/libavformat/: avformat.h
SnailFFmpeg/ffmpeg/src/main/java/com/snail/ffmpeg/: FFmpegActivity.kt  FilterActivity.kt  PlayerActivity.kt
SnailFFmpeg/ffmpeg/src/main/java/com/snail/ffmpeg/base/: BaseActivity.kt
SnailFFmpeg/ffmpeg/src/main/java/com/snail/ffmpeg/constant/: MediaForm.kt
SnailFFmpeg/ffmpeg/src/main/java/com/snail/ffmpeg/transform/: MediaTransFormUtil.kt
SnailFFmpeg/ffmpeg/src/main/res/layout/: activity_ffmpeg.xml  activity_filter.xml
SnailFFmpeg/ffmpeg/src/test/java/com/snail/ffmpeg/: ExampleUnitTest.kt
SnailFFmpeg/gradle/wrapper/: gradle-wrapper.properties
SnailFFmpeg/live/: CMakeLists.txt  build.gradle
SnailFFmpeg/live/src/androidTest/java/com/snail/live/: ExampleInstrumentedTest.kt
SnailFFmpeg/live/src/main/: AndroidManifest.xml
SnailFFmpeg/live/src/main/cpp/: AudioStream.cpp  AudioStream.h  LogUtil.h  RtmpPusher.cpp  SafeQueue.cpp  SafeQueue.h  VideoStream.cpp  VideoStream.h
SnailFFmpeg/live/src/main/java/com/snail/live/: LiveActivity.kt  LivePusher.kt
SnailFFmpeg/live/src/main/java/com/snail/live/base/: BaseActivity.kt
SnailFFmpeg/live/src/main/java/com/snail/live/model/: AudioBean.kt  VideoBean.kt
SnailFFmpeg/live/src/main/java/com/snail/live/stream/: AudioStream.kt  CameraHelper.kt  VideoStream.kt
SnailFFmpeg/live/src/main/java/com/snail/live/utils/: PLog.kt
SnailFFmpeg/live/src/main/res/layout/: activity_live.xml
SnailFFmpeg/live/src/test/java/com/snail/live/: ExampleUnitTest.kt
